--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -41,7 +41,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt6 COMPONENTS Widgets REQUIRED)
 find_package(Qwt REQUIRED)
 
 # For Windows builds, we'd like to copy DLL and PDB for Qwt to output folder, or the application
@@ -95,10 +95,10 @@ endif()
 set_property( TARGET owlcat_mono_profiler_ui PROPERTY CXX_STANDARD 17 )
 
 if (WIN32)
-    target_link_libraries( owlcat_mono_profiler_ui PRIVATE owlcat_mono_profiler_client Qt5::Widgets debug Qwt::Qwtd optimized Qwt::Qwt)
+    target_link_libraries( owlcat_mono_profiler_ui PRIVATE owlcat_mono_profiler_client Qt6::Widgets debug Qwt::Qwtd optimized Qwt::Qwt)
 else()
     # Linux don't have debug versions of libraries installed usually
-    target_link_libraries( owlcat_mono_profiler_ui PRIVATE -ldl owlcat_mono_profiler_client Qt5::Widgets Qwt::Qwt libstdc++fs.a)
+    target_link_libraries( owlcat_mono_profiler_ui PRIVATE -ldl owlcat_mono_profiler_client Qt6::Widgets Qwt::Qwt libstdc++fs.a)
 endif()
 
 
@@ -108,6 +108,6 @@ if (WIN32)
     add_custom_command(
         TARGET owlcat_mono_profiler_ui
         POST_BUILD
-        COMMAND ${Qt5_DIR}/../../../bin/windeployqt.exe $<TARGET_FILE_DIR:owlcat_mono_profiler_ui>/$<TARGET_FILE_NAME:owlcat_mono_profiler_ui> -opengl -angle --no-opengl-sw
+        COMMAND ${Qt6_DIR}/../../../bin/windeployqt.exe $<TARGET_FILE_DIR:owlcat_mono_profiler_ui>/$<TARGET_FILE_NAME:owlcat_mono_profiler_ui> -opengl --no-opengl-sw
     )
 endif()
