--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ unity/OwlcatMonoProfilerTest/Logs
 unity/OwlcatMonoProfilerTest/Temp
 unity/OwlcatMonoProfilerTest/UserSettings
 unity/OwlcatMonoProfilerTest/MemoryCaptures
+unity/OwlcatMonoProfilerTest/obj
 unity/OwlcatMonoProfilerTest/log.txt
 
 *.csproj
